--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* RESPONSIVE CSS ========================================================================= */
 
 /*Tablets en horizonal y escritorios normales------------------------------------------------------------------------- */
-@media (min-width: 768px)  {
+@media (min-width: 1000px)  {
   /*Botones Servicios*/
   .carousel-control-prev{
     position: relative !important;
@@ -851,7 +851,49 @@
 }
 
 /* Móviles en horizontal o tablets en vertical------------------------------------------------------------------------- */
-@media (max-width: 767px) {
+@media (max-width: 999px) {
+
+  /*CSS BP_CARD*/
+  .bp_card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    align-items: center;
+  }
+
+  .description-bp_card {
+    padding-left: 100px;
+    max-width: 80%;
+    padding: 20px;
+  }
+
+  .description-bp_card h1, .description-bp_card h2 {
+    color: #21b916;
+  }
+
+  .checks {
+    align-items: center;
+    color: #21b916;
+    padding-left: 50px;
+  }
+
+  .checks-items {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .image-bp_card {
+    padding: 20px;
+    width: 80%;
+    min-height: 300px;
+    margin-top: 20px;
+    background-image: url("/PWM-TEMPLATES/img/bp_card.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 
   /*Prueba para dar forma a las scrollBar*/
   *::-webkit-scrollbar {
@@ -1138,28 +1180,31 @@
     background-color: red;
   }
   .carouselTall {
-    width: 80%;
+    width: 90%;
   }
   .reserve {
-    margin-left: 296px;
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
   }
   .reserve-box {
-    margin: 20px;
     width: 100%;
+    height: 60vh;
     background-color: #555555;
-    height: 500px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    overflow-y: scroll;
-    display: flex;
     flex-direction: column;
+    overflow-y: scroll;
+  }
+
+  #carouselExample {
+    margin-top: 20px;
+  }
+
+  .dayOfWeek {
+    margin: 10px;
   }
 
   #btn-reserve {
@@ -1339,7 +1384,7 @@
   .register-login-form {
     display: flex;
     flex-direction: column;
-    margin-top: 60px;
+    height: 100vh;
     justify-content: center;
     align-items: center;
   }
@@ -1467,7 +1512,7 @@
   }
 
   .carousel-item {
-    min-height: 500px;
+    min-height: 400px;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
