--- a/css/main.css
+++ b/css/main.css
@@ -856,15 +856,15 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 100px;
-    margin-bottom: 100px;
     align-items: center;
+    background-color: darkgreen;
   }
 
   .description-bp_card {
     padding-left: 100px;
     max-width: 80%;
     padding: 20px;
+    color: white;
   }
 
   .description-bp_card h1, .description-bp_card h2 {
@@ -1655,7 +1655,7 @@
     margin: 0;
     padding: 0;
     font-size: 0;
-    z-index: 3;
+    z-index: 30;
   }
   #floating-share-buttons li {
 
@@ -1706,6 +1706,98 @@
 
 /* Móviles en vertical------------------------------------------------------------------------- */
 @media screen and (max-width: 767px) {
+
+  /*CSS SEMICIRCLES*/
+  .semicircles-container {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .semicircle {
+    transform: rotate(180deg);
+    position: absolute;
+    bottom: 0;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+
+  }
+
+  .semicircle-down {
+    position: absolute;
+    top: 0;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+  }
+
+  .first {
+    background-color: darkgreen;
+    z-index: 3;
+    width: 100%;
+    height: 50px;
+  }
+
+  .second {
+    background-color: green;
+    z-index: 2;
+    width: 100%;
+    height: 80px;
+  }
+
+  .third {
+    background-color: #21b916;
+    z-index: 1;
+    width: 100%;
+    height: 100px;
+  }
+
+
+  /*CSS BP_CARD*/
+  .bp_card {
+    background-color: darkgreen;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+
+
+
+  .description-bp_card {
+    padding-left: 100px;
+    max-width: 80%;
+    padding: 20px;
+    color: white;
+  }
+
+  .description-bp_card h1, .description-bp_card h2 {
+    color: #21b916;
+  }
+
+  .checks {
+    align-items: center;
+    color: #21b916;
+    padding-left: 50px;
+  }
+
+  .checks-items {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .image-bp_card {
+    padding: 20px;
+    width: 80%;
+    min-height: 300px;
+    margin-top: 20px;
+    background-image: url("/PWM-TEMPLATES/img/bp_card.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
   /*Prueba Imagen fondo Productos*/
   .img-product {
     min-height: 100px;
@@ -2235,7 +2327,7 @@
     position: fixed; /*absolute para que se mueva solo el ul*/
     left: 0;
     top: 0;
-    z-index: 3;
+    z-index: 50;
   }
   nav{
     float: left;
@@ -2319,7 +2411,7 @@
     margin: 0;
     padding: 0;
     font-size: 0;
-    z-index: 3;
+    z-index: 30;
   }
   #floating-share-buttons li {
   }
