--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,11 @@
 /*Tablets en horizonal y escritorios normales------------------------------------------------------------------------- */
 @media screen and (min-width: 992px)  {
 
+  /*Títulos*/
+  h1 {
+    color: #21b916 !important;
+  }
 
-  /*Prueba para dar forma a las scroll Bar*/
   /*Prueba para dar forma a las scrollBar*/
   *::-webkit-scrollbar {
     width: 10px;
@@ -718,7 +721,7 @@
   /*CSS MAIN*/
   main {
     background-color: #d9ffd9;
-    margin-top: 100px;
+    margin-top: 93px;
   }
   .p-justify {
     text-align: justify;
@@ -803,6 +806,11 @@
 
 /*Tablets*/
 @media screen and (min-width: 768px) and (max-width: 991px) {
+
+  /*Títulos*/
+  h1 {
+    color: #21b916 !important;
+  }
 
   /*CSS SEMICIRCLES*/
   .semicircles-container {
@@ -1224,7 +1232,7 @@
     margin: 15px;
     height: 50px;
   }
-  /*CSS TIENDA*/
+
   /*CSS TIENDA*/
   .main-tienda {
     display: flex;
@@ -1299,13 +1307,18 @@
     justify-content: center;
   }
   .d-flex {
-    width: 100%;
+    width: 50%;
+    margin-inline: 5%;
   }
   .filters {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-inline: 20px;
+    width: 100%;
+  }
+
+  .form-select {
+    width: 50% !important;
   }
 
   .filters select {
@@ -1579,26 +1592,26 @@
     background-color: rgba(42,45,49,1);
     color: white;
     margin-top: 2px;
-
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-
   .footer-col1 {
-    width: 30%;
   }
   footer div p, footer div a  {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     color: white;
   }
-
-  .footer-col2, footer-col3 {
-    width: 40%;
+  .footer-col3 {
+    margin-bottom: 50px;
   }
-
+  .footer-col2{
+    margin-top: 50px;
+    margin-inline: 50%;
+    margin-bottom: 50px;
+  }
   .footer-logo {
     height: auto;
     width: 150px;
@@ -1610,7 +1623,7 @@
 
   main {
     background-color: #d9ffd9;
-    margin-top: 100px;
+    margin-top: 93px;
   }
 
   .p-justify {
@@ -1706,6 +1719,11 @@
 
 /* Móviles en vertical------------------------------------------------------------------------- */
 @media screen and (max-width: 767px) {
+
+  /*Títulos*/
+  h1 {
+    color: #21b916 !important;
+  }
 
   /*CSS SEMICIRCLES*/
   .semicircles-container {
@@ -2055,6 +2073,11 @@
     width: 35%;
   }
   /*CSS TIENDA*/
+  .form-select {
+    text-overflow: ellipsis;
+    margin-inline: 5%;
+  }
+
   .main-tienda {
     display: flex;
     flex-direction: row;
@@ -2126,23 +2149,25 @@
     justify-content: center;
   }
   .d-flex {
-    width: 100%;
+    margin-inline: 5%;
+    width: 50%;
   }
   .filters {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-inline: 20px;
+    width: 100%;
   }
   .filters select {
-    margin-right: 10px;
-    padding: 5px;
+    margin-block: 30px;
     font-size: 16px;
     border-radius: 5px;
   }
-  .filters select {
-    margin: 30px;
+
+  .form-select {
+    width: 50% !important;
   }
+
   .products {
     width: 100%;
     display: flex;
@@ -2398,7 +2423,7 @@
   /*CSS MAIN*/
   main {
     background-color: #d9ffd9;
-    margin-top: 100px;
+    margin-top: 93px;
   }
   .p-justify {
     text-align: justify;
