--- a/component/carousel.html
+++ b/component/carousel.html
@@ -1,4 +1,4 @@
-<div class="carousel-home">
+<div class="carousel-home smoke-effect">
   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
