--- a/css/main.css
+++ b/css/main.css
@@ -634,10 +634,47 @@
     width:50%;
   }
   /*CSS CAROUSEL*/
-  .carousel-home {
-    max-width: 100%;
-    margin-bottom: 1.5rem;
+  .smoke-effect {
+    position: relative;
+    overflow: hidden;
   }
+
+  .smoke-effect::before {
+    content: "";
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, #d9ffd9 50%, rgb(73, 253, 73, 1) 70%);
+    transform: scale(2);
+    filter: blur(30px);
+    opacity: 0;
+    animation: smoke 5s ease-in-out infinite;
+  }
+
+  @keyframes smoke {
+    0% {
+      top: 100%;
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    50% {
+      top: 50%;
+      transform: scale(1.5);
+      opacity: 1;
+    }
+    100% {
+      top: -100%;
+      transform: scale(2);
+      opacity: 0;
+    }
+  }
+
+ .carousel-home {
+   margin-bottom: 50px;
+ }
+
   .carousel-item img {
     max-height: 500px;
     margin-left: 25%;
