--- a/css/main.css
+++ b/css/main.css
@@ -434,12 +434,10 @@
 
   /*CSS SIGN UP IN */
   .imgUser {
-    width:150px;
-    height:150px;
-    border-radius:150px;
     height:100px;
     margin-bottom: 50px;
   }
+  
   .register-login-form {
     display: flex;
     flex-direction: column;
@@ -1527,7 +1525,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    width:50%;
+    width: 90%;
   }
 
 
@@ -1814,8 +1812,6 @@
     align-items: center;
   }
 
-
-
   .description-bp_card {
     padding-left: 100px;
     max-width: 80%;
@@ -2089,23 +2085,54 @@
     background-color: #36b920 !important;
   }
 
+  #carouselExample {
+    max-width: 100%;
+    padding: 5%;
+  }
+
   .reserve {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
   }
-  .reserve-box {
-    margin: 20px;
-    width: 100%;
-    background-color: #555555;
-    height: 500px;
+
+  .reserve h1 {
+    margin: 15px;
+  }
+
+  .dayOfWeek {
+    margin-bottom: 10px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: row;
+    overflow-x: scroll;
     overflow-y: scroll;
   }
+
+  .dayOfWeek p {
+    font-size: small;
+  }
+
+  .dayOfWeek h2 {
+    font-size: 1rem;
+  }
+
+  .dayOfWeekTitle {
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  .reserve-box {
+    width: 100%;
+    background-color: #555555;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    overflow-x: scroll;
+  }
+
   #btn-reserve {
     margin-bottom: 35px;
   }
@@ -2132,6 +2159,7 @@
     width: 100% ;
     height: 50px;
     padding: 20px;
+    margin-bottom: 30px;
   }
   .aside-mov button{
     width: 100% ;
@@ -2270,9 +2298,6 @@
 
   /*CSS SIGN UP IN */
   .imgUser {
-    width:150px;
-    height:150px;
-    border-radius:150px;
     height:100px;
     margin-bottom: 50px;
   }
